changed div class in index.html, spaced header, main and footer in styles.css evenly. need to fix added scrolling after spacing evenly in css

--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,18 @@
 body {
     font-family: 'Roboto', sans-serif;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .profile-pic {
-    width: 2.5rem;
+    height: 2rem;
     border-radius: 50%;
 }
 
 .material-icons {
-    width: 1.5rem;
+    height: 1.5rem;
 }
 
 .profile-pic:hover {
@@ -53,3 +57,21 @@ header nav ul a:hover {
     text-decoration: underline;
 }
 
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+form, .buttons {
+    display: flex;
+}
+
+footer {
+    display: flex;
+    flex-direction: column;
+}
+
+footer nav ul {
+    display: flex;
+}
